--- a/templates/result.html
+++ b/templates/result.html
@@ -48,7 +48,7 @@
         <p>Length of Line: {{length }} mm</p>
 
         {% if plot_image_path %}
-            <img src="{{ url_for('plot_image') }}" alt="AC Measurement" class="result-image">
+            <img src="{{ image_path }}" alt="AC Measurement" class="result-image">
         {% endif %}
     </div>
 </body>
